<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, ListViewExampleActivity!</string>
    <string name="app_name">StickyManager</string>
    <string name="Sticky_list_name">Your Sticky List</string>
    <string name="NewSticky_Header">Add Sticky</string>
    <string name="NewSticky_Text">Sticky Text</string>
    <string name="NewSticky_Title">Title</string>
    <string name="NewSticky_DueDate">Due Date</string>
    <string name="NewSticky_Type">Sticky Type</string>
    <string name="NewSticky_Priority">Sticky Priority</string>
    <string name="NewSticky_SaveButton">Save</string>
    <string name="NewSticky_EditButton">Edit</string>
    <string name="NewSticky_Reminder_Period">Reminder Period</string>
    <string name="NewSticky_Progress">Sticky Progress</string>
    <string name="ShareSticky_Title">Share Sticky</string>
    <string name="ShareSticky_Email">Email Address</string>
    <string name="ShareSticky_Button">Share</string>
    <string name="ShareSticky_Msg">Sticky Message</string>
    <string name="EditSticky_Header">Edit Sticky</string>
    <string name="ViewSticky_Header">Sticky Details</string>
    <string name="LoginSticky_Header">Sticky Manager</string>
    <string name="LoginSticky_UserName">UserName</string>
    <string name="LoginSticky_Password">Password</string>
    <string name="SearchSticky_Title">Search</string>
    
    <string-array name="StickyType_Array">
        <item>Public</item>
        <item>Private</item>
        <item>Work</item>
        <item>Other</item>
    </string-array>
    <string-array name="StickyPriority_Array">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
        <item>Urgent</item>
    </string-array>
    <string-array name="StickyProgressArray">
        <item>Not Started</item>
        <item>Started</item>
        <item>Completed</item>
        <item>10%</item>
        <item>20%</item>
        <item>30%</item>
        <item>40%</item>
        <item>50%</item>
        <item>60%</item>
        <item>70%</item>
        <item>80%</item>
        <item>90%</item>
    </string-array>

    <style name="ButtonText">
        <item name="android:textColor">#ffffff</item>
        <item name="android:gravity">center</item>

        <item name="android:textSize">16dp</item>
        <item name="android:textStyle">bold</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
    </style>

</resources>