<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e1e2e4"
        android:orientation="vertical"
        android:weightSum="1" >

            <LinearLayout
                android:id="@+id/editheaderLayout"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/stickyheader1"
                android:gravity="center"
                android:paddingBottom="1dip"
                android:paddingTop="1dip" >

                <ImageView
                    android:id="@+id/EditImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/edit" 
                    android:paddingLeft="5dip"/>

                <TextView
                    android:id="@+id/newStickyHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingRight="32dip"
                    android:text="@string/EditSticky_Header"
                    android:textColor="@color/White"
                    android:textSize="26dip"
                    android:textStyle="bold" />
            </LinearLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/Black"
            android:text="@string/NewSticky_Text" />

        <EditText
            android:id="@+id/stickyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="5" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="@color/Black"
            android:text="@string/NewSticky_Title" />

        <EditText
            android:id="@+id/stickyTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="@color/Black"
            android:text="@string/NewSticky_Type" />

        <Spinner
            android:id="@+id/stickyType"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/NewSticky_Type" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="@color/Black"
            android:text="@string/NewSticky_Priority" />

        <Spinner
            android:id="@+id/stickyPriority"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/NewSticky_Type" />

<!--         <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="@color/Black"
            android:text="@string/NewSticky_DueDate" /> -->

        <!--
         <DatePicker
        android:id="@+id/dueDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
        -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/dueDateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select Due Date" />

            <TextView
                android:id="@+id/dueDateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="@color/Black"
                />
        </LinearLayout>

        <Button
            android:id="@+id/editButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/NewSticky_EditButton" />
    </LinearLayout>

</ScrollView>