<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/commandLayout"
        android:fillViewport="true" >

        <LinearLayout
            android:id="@+id/contentLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#e1e2e4"
            android:fadingEdge="vertical"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/editheaderLayout"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/stickyheader1"
                android:gravity="center"
                android:paddingBottom="1dip"
                android:paddingTop="1dip" >

                <ImageView
                    android:id="@+id/ViewImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/view" />

                <TextView
                    android:id="@+id/newStickyHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingRight="48dip"
                    android:text="@string/ViewSticky_Header"
                    android:textColor="@color/White"
                    android:textSize="26dip"
                    android:textStyle="bold" />
            </LinearLayout>

            <TableLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/stickyViewTableLayout"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <!-- 2 columns -->

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dip" >

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/NewSticky_Title"
                        android:textColor="@color/Black"
                        android:textSize="16dip" />

                    <TextView
                        android:id="@+id/stickyTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:inputType="textPersonName"
                        android:scrollHorizontally="false"
                        android:textColor="@color/Black" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dip" >

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/NewSticky_Type"
                        android:textColor="@color/Black"
                        android:textSize="16dip" />

                    <TextView
                        android:id="@+id/stickyType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:inputType="textPersonName"
                        android:textColor="@color/Black" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dip" >

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/NewSticky_Priority"
                        android:textColor="@color/Black"
                        android:textSize="16dip" />

                    <TextView
                        android:id="@+id/stickyPriority"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:inputType="textPersonName"
                        android:textColor="@color/Black" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dip" >

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/NewSticky_DueDate"
                        android:textColor="@color/Black"
                        android:textSize="16dip" />

                    <TextView
                        android:id="@+id/dueDateText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/Black" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dip" >

                    <TextView
                        android:id="@+id/viewStickyProgressHeading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/NewSticky_Progress"
                        android:textColor="@color/Black"
                        android:textSize="16dip" />

                    <TextView
                        android:id="@+id/viewStickyProgress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/Black" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dip" >

                    <TextView
                        android:id="@+id/viewStickyReminderHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/NewSticky_Reminder_Period"
                        android:textColor="@color/Black"
                        android:textSize="16dip" />

                    <TextView
                        android:id="@+id/viewStickyReminderPeriod"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/Black" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dip" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/NewSticky_Text"
                        android:textColor="@color/Black"
                        android:textSize="16dip" />

                    <TextView
                        android:id="@+id/stickyText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:inputType="textMultiLine"
                        android:lines="5"
                        android:textColor="@color/Black" />
                </TableRow>
            </TableLayout>

            <!--
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NewSticky_Title"
                android:textColor="@color/Black"
                android:textSize="16dip" />

            <TextView
                android:id="@+id/stickyTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:inputType="textPersonName"
                android:textColor="@color/Black" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/NewSticky_Text"
                android:textColor="@color/Black"
                android:textSize="16dip" />

            <TextView
                android:id="@+id/stickyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:inputType="textMultiLine"
                android:lines="5"
                android:textColor="@color/Black" />
            -->

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/commandLayout"
        android:layout_width="fill_parent"
        android:layout_height="45dip"
        android:layout_alignParentBottom="true"
        android:background="@drawable/stickyheader1"
        android:orientation="horizontal"
        android:paddingTop="5dip" >

        <ImageView
            android:id="@+id/PublicShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/share" />

        <ImageView
            android:id="@+id/PublicEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/edit" />

        <ImageView
            android:id="@+id/PublicDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/delete" />
    </LinearLayout>

</RelativeLayout>